--- a/externals/index.html
+++ b/externals/index.html
@@ -1,6 +1,8 @@
 <html>
   <body>
     <script src="data.js"></script>
+    <script src="jquery.js"></script>
+    <script src="fs-extra.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
