--- a/externals/index.html
+++ b/externals/index.html
@@ -2,7 +2,7 @@
   <body>
     <script src="data.js"></script>
     <script src="jquery.js"></script>
-    <script src="fs-extra.js"></script>
+    <script src="libraryTarget/dist/index.cmd2.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
